--- a/Libro-abi.html
+++ b/Libro-abi.html
@@ -67,17 +67,17 @@ body{
 
 /* Pergamino */
 .pergamino{
-    background:linear-gradient(to bottom,#f8ecd2,#e8d3a3);
     width:95%;
     max-width:650px;
-    height:88vh;
-    padding:35px;
+    height:95vh;
+    padding:30px;
     border-radius:12px;
+    background:linear-gradient(to bottom,#f8ecd2,#e8d3a3);
     box-shadow:0 0 40px rgba(0,0,0,0.9);
-    display:flex;
-    flex-direction:column;
+    display:block;
+    overflow-y:auto;
 }
-
+    
 .titulo{
     font-family:'Great Vibes', cursive;
     font-size:40px;
