--- a/Buenas-noches-abi.html
+++ b/Buenas-noches-abi.html
@@ -132,19 +132,8 @@ function escribirTexto(texto){
 }
 
 function mostrarMensaje(){
-    const texto=`Quiero que esta noche descanses tranquila...
-Que cierres los ojos sabiendo que alguien piensa en ti antes de dormir.
-
-Que aunque el mundo sea ruidoso, mi amor por ti es suave,
-constante y sincero.
-
-No importa la distancia, no importa el silencio,
-aquí estoy...
-
-Deseándote sueños hermosos,
-y prometiéndote que mañana volveré a intentar hacerte sonreír.
-
-Buenas noches...
+    const texto=`Quiero que esta noche puedas descansar tranquila y que sepas que sin importar el dia la hora o el lugar siempre te voy a amar, quiero cierres los ojos sabiendo que siempre pienso en ti antes de dormir, cuando me levanto y en cada momento del día, que aunque mi vida se este cayendo a pedazos mi amor por ti siempre sera el mismo y crecera cada dia mas y no importa la distancia, no importa el silencio que a veces haya siempre te amare, amare esa sonrisa que aunque tenga el peor dia de mi vida siempre me hara sonreír, amaare esa dulce voz que siempre me tranquiliza en mis peores momentos, amo esos ojos tuyos que me traen una paz que no encontare en ningun lado, y sobre todo te amo a ti, casa centímetro de tu cuerpo es lo mas hermoso que jamas vi, y por eso siempre deseo protegerte, cuidarte y ayudarte, porque tu eres mi mundo y daria lo que fuera para que estes bien. y por eso quiero desearte que sueñes con lo que mas feliz te hace y tengas una muy hermosa noche. 
+Buenas noches mi hermosa abi
 Te amo.`;
 
     escribirTexto(texto);
